# client-silencer

./: Cargo.toml  README.md
client-hook/: Cargo.toml
client-hook/src/: hook.rs  import.rs  lib.rs  utils.rs
dll-injector/: Cargo.toml
dll-injector/src/: main.rs
src/: main.rs  mains.rs
