[package]
name = "client-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
#once_cell = { version = "1", default-features = false, features = ["race"] }
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming"
] }
